# rustonacci

./: Cargo.toml  LICENSE  README.md  pyproject.toml
rustonacci/: __init__.py
src/: calculations.rs  lib.rs  mod.rs  numbers.rs
