[package]
name = "rustonacci"
version = "0.1.0"
edition = "2021"
authors = ["Cellan Hall <hallcellan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pyo3]
version = "0.18.3"
features = ["extension-module"]

[lib]
name = "rustonacci"
crate-type = ["cdylib"]

[target.x86_64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]
[target.aarch64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]